Completed the playerRound function

--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <title>Rock, Paper, and Scissors</title>
 </head>
 <body>
-    <h1>Hello, World!</h1>
+    <h1>Rock, Paper, Scissors, Go!</h1>
     <script src="app.js"></script>
 </body>
 </html>
